build(gradle): check null pointer exception

--- a/build.gradle
+++ b/build.gradle
@@ -64,9 +64,22 @@ configure(javaProjects) { project ->
 
     if (needCheck) {
         apply plugin: "net.ltgt.errorprone"
+
         dependencies {
             errorprone("com.google.errorprone:error_prone_core:2.3.3")
             errorproneJavac("com.google.errorprone:javac:9+181-r4173-1")
+            errorprone("com.uber.nullaway:nullaway:0.7.9")
+        }
+
+        tasks.named("compileTestJava").configure {
+            options.errorprone.enabled = false
+        }
+
+        tasks.withType(JavaCompile).configureEach {
+            options.errorprone {
+                option("NullAway:AnnotatedPackages", "com.github.flycat")
+                warn("NullAway")
+            }
         }
     }
 
