--- a/config/gradle/bootProject.gradle
+++ b/config/gradle/bootProject.gradle
@@ -38,8 +38,7 @@ if (isTestServer(env)) {
     ext.appJvmArgs += ["-Xdebug",
                        "-Xnoagent",
                        '-Djava.compiler=NONE',
-                       """-Xrunjdwp:transport=dt_socket,address=${ext.debugServerPort},
-server=y,suspend=n""".toString()]
+                       "-Xrunjdwp:transport=dt_socket,address=${ext.debugServerPort}, server=y,suspend=n".toString()]
 
 }
 
