perf(tomcat): free up port more quickly

--- a/config/gradle/deployTar.gradle
+++ b/config/gradle/deployTar.gradle
@@ -1,6 +1,6 @@
 ssh.settings {
     dryRun = project.hasProperty('dryRun')
-//    fileTransfer = 'sftp'
+    fileTransfer = 'scp'
 }
 
 task showPlatformVersion {
