--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -12,3 +12,7 @@ ext.isProd = { env ->
 ext.isTestServer = { env ->
     return "test".equals(env.toString())
 }
+
+ext.isDocker = {
+    env -> return "docker".equals(env.toString())
+}
