feat(docker): add rollback

--- a/config/gradle/dockerProject.gradle
+++ b/config/gradle/dockerProject.gradle
@@ -20,6 +20,7 @@ jib {
         mainClass = mainClassName
         ports = [containerPort]
         volumes = ['/app/data/logs']
+        creationTime = 'USE_CURRENT_TIMESTAMP'
     }
 }
 
