--- a/config/gradle/dockerProject.gradle
+++ b/config/gradle/dockerProject.gradle
@@ -1,7 +1,8 @@
 ext.jvmArgs = applicationDefaultJvmArgs
 jib {
     from {
-        image = 'amazoncorretto:8u232'
+//        image = 'amazoncorretto:8u232'
+        image = 'tomcat:9.0-jdk8-corretto'
     }
 
     to {
