--- a/config/gradle/bootProject.gradle
+++ b/config/gradle/bootProject.gradle
@@ -1,9 +1,29 @@
+import java.text.SimpleDateFormat
+
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
 apply plugin: "java"
 apply plugin: 'application'
 apply from: "${gradleConfigDir}/tasks.gradle"
+
 processResources.dependsOn copyConfiguration
+
+
+if (hasProperty("tag")) {
+    ext.tag = "-" + tag
+} else {
+    ext.tag = ""
+}
+
+apply from: "${gradleConfigDir}/git.gradle"
+println "Current branch name ${currentBranch}, latest git hash ${latestGitHash}, commit time ${latestGitDate}"
+ext.gitVersionInfo = "git_${currentBranch}_${latestGitDate}_${latestGitHash}"
+
+version = env + tag + '-' + gitVersionInfo
+if (isProd(env)) {
+    version += '-pkg_' + (new Date().format("yyyyMMdd_HHmmss"))
+}
+
 
 if (hasProperty("appClassName")) {
     println "Current main class name: ${mainClassName}, appClassName: ${appClassName}"
@@ -90,21 +110,12 @@ applicationDefaultJvmArgs = appJvmArgs + [
         "-Xmx512m",
         "-Xmn128m",
         "-XX:ErrorFile=${errorLog}".toString(),
-        "-Xloggc:${gcLog}".toString()
+        "-Xloggc:${gcLog}".toString(),
+        "-Dapp.version=" + version
 ]
 
 println 'Run java home:' + System.properties['java.home']
 println 'App jvm args: ' + applicationDefaultJvmArgs.join(",")
-
-if (!hasProperty("tag")) {
-    ext.tag = "default"
-}
-
-
-version = env + '-' + tag
-if (isProd(env)) {
-    version += '-' + (new Date().format("yyyyMMdd_HHmmss"))
-}
 
 
 //defaultTasks 'compileJava', 'checkStyle'
