--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -10,9 +10,9 @@ ext.isProd = { env ->
 }
 
 ext.isTestServer = { env ->
-    return "test".equals(env.toString())
+    return "test".equals(env.toString()) || "testdocker".equals(env.toString())
 }
 
 ext.isDocker = {
-    env -> return "docker".equals(env.toString())
+    env -> return "docker".equals(env.toString()) || "testdocker".equals(env.toString())
 }
