chore(docker): change app data path

--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,18 @@ ext.jarProjects = javaProjects.findAll {
     !it.name.endsWith("-sba")
 }
 
+apply plugin: 'idea'
+idea {
+//    pathVariables GRADLE_HOME: file("$buildDir")
+    println("build dir $buildDir")
+    module {
+        inheritOutputDirs = false
+        outputDir = file("$buildDir/classes/java/main")
+        downloadJavadoc = false
+        downloadSources = true
+    }
+}
+
 
 configure(jarProjects) { project ->
 
