--- a/config/gradle/dockerProject.gradle
+++ b/config/gradle/dockerProject.gradle
@@ -1,5 +1,9 @@
 ext.jvmArgs = applicationDefaultJvmArgs
+
+System.setProperty("jib.httpTimeout", '0')
+
 jib {
+
     from {
 //        image = 'amazoncorretto:8u232'
         image = 'https://reg.qiniu.com/open-flycat/flycat:latest'
